# PROJ

bash_console_BackUpUsers/: backup_users.sh  crontab_list.txt
bash_console_SystemDetailer/: .script.sh.swp  get_system_information.sh  script.sh
c_arduino_AquaGrow/: README.md
c_arduino_AquaGrow/main/: main.ino
c_console_calculator/: README.md  main.c
c_console_guessNumber/: README.md  main.c
c_console_taskManager/: README.md  main.c
cpp_QML_Qt_BlackJack/: README.md
cpp_QML_Qt_BlackJack/BlackJack/: CMakeLists.txt  Main.qml  cardmanager.cpp  cardmanager.h  main.cpp
cpp_QML_socket/GLvariant1/qml/: Main.qml
cpp_console_SimpleSock/: README.md
cpp_console_SimpleSock/src/server/: server.cpp
cpp_postgres_NumBooker/: Makefile  README.md  main.cpp  project
cpp_postgres_NumBooker/settings/: config.ini
cpp_postgres_NumBooker/src/: main.cpp  numbooker.cpp  numbooker.h  postgresdb.cpp  postgresdb.h
cpp_socket_SimpleSock/: Makefile  README.md  runClient  runServer
cpp_socket_SimpleSock/src/client/: client.cpp  client.h  runClient.cpp
cpp_socket_SimpleSock/src/network/: NetworkValidator.cpp  NetworkValidator.h  socket.cpp  socket.h
cpp_socket_SimpleSock/src/server/: runServer.cpp  server.h
cpp_socket_client&server/gl_v1/: .gitignore
cpp_socket_client&server/gl_v1/docs/: c++_core.md  ubuntu.md
cpp_socket_client&server/gl_v1/include/client/: client.h
cpp_socket_client&server/gl_v1/include/logger/: logger.h
cpp_socket_client&server/gl_v1/include/package/: package.h
cpp_socket_client&server/gl_v1/include/server/: server.h
cpp_socket_client&server/gl_v1/include/socket/: socketStream.h
cpp_socket_client&server/gl_v1/main/: run_client.cpp  run_server.cpp
cpp_socket_client&server/gl_v1/src/client/: client.cpp
cpp_socket_client&server/gl_v1/src/logger/: logger.cpp
cpp_socket_client&server/gl_v1/src/server/: server.cpp
cpp_socket_client&server/gl_v1/src/socket/: socketStream.cpp
cpp_socket_client&server/gl_v2/: Makefile
cpp_socket_client&server/gl_v2/client/: client.cpp
cpp_socket_client&server/gl_v2/include/liboai/: liboai.h
cpp_socket_client&server/gl_v2/include/logger/: logger.h
cpp_socket_client&server/gl_v2/include/process/: process.h
cpp_socket_client&server/gl_v2/server/: runServer.cpp  server.cpp  server.h
cpp_socket_client&server/gl_v2/src/logger/: logger.cpp
cpp_socket_client&server/gl_v2/src/process/: process.cpp
lnx_console_BackUpUsers/: README.md  http_get_info.sh
lnx_console_SystemDetailer/: README.md
py_ciphers/py_caesars_cipher/: caesars_cipher.py
